--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="row justify-content-center">
             <div class="col-md-8">
                 <div class="card">
-                    <div class="card-header"></div>
+                    <div class="card-header">IMES</div>
     
                     <div class="card-body">
 
@@ -65,7 +65,15 @@
                         }
                     }]
                 },
+                legend:{
+                display: false,
+            },
+            title:{
+                display: true,
+                text: "Red & Orange Real-time data",
+                fontSize: 25,
             }
+            },
         });
 
         redValue++;
